jjtricks/src/test/resources/com/github/oowekyala/jjtx/cli/jccTranslation/commentBug/env/SimpleExprs.jjt

options {
    MULTI = true;
}

PARSER_BEGIN(SimpleExprParser)

    package com.jjtx.exprs;

    /**
     *  This is my parser declaration
     */
    public class SimpleExprParser {

    }

PARSER_END(SimpleExprParser)

// Some token declarations
<DEFAULT>
TOKEN :{
  < PLUS: "+" >
| < MINUS: "-" >
| < NULL: "null" >
| < INTEGER: ["+",  "-"] <DIGITS> >
| < #DIGITS: (["0"-"9"])+ >
}


void Expression() #void:
{
    jjtThis.setImage("Expr"); // Do it
}
{
      BinaryExpression()
    | <NULL>   #NullLiteral
}

void BinaryExpression() #BinaryExpr(>1):
{
   jjtThis.setImage("Expr"); // Do it
}
{
    UnaryExpr() [ ( "+" | "-" ) UnaryExpr() ]
}

void UnaryExpr() #void: {}
{
  ("(" Expression() ")") #ParenthesizedExpr | Integer()
}

void Integer() #IntegerLiteral: {}
{
  <INTEGER>
}
